// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportHeaderTest renders with failures, without inapplicable 1`] = `
<div
  className="report-header"
  role="banner"
>
  <h1>
    <InlineImage
      alt=""
      type={0}
    />
    Accessibility Insights for Web
     automated checks result
  </h1>
  <h2>
    Summary
  </h2>
  <nav>
    <div>
      <InlineImage
        alt=""
        type={2}
      />
      <a
        href="#failed"
      >
        2
         failed checks 
        <span>
          (
          3
           failures)
        </span>
      </a>
    </div>
    <div>
      <InlineImage
        alt=""
        type={3}
      />
      <a
        href="#passed"
      >
        1
         passed checks
      </a>
    </div>
    <div>
      <InlineImage
        alt=""
        type={4}
      />
      <a
        href="#notapplicable"
      >
        0
         not applicable checks
      </a>
    </div>
  </nav>
</div>
`;

exports[`ReportHeaderTest renders without failures, with inapplicable 1`] = `
<div
  className="report-header"
  role="banner"
>
  <h1>
    <InlineImage
      alt=""
      type={0}
    />
    Accessibility Insights for Web
     automated checks result
  </h1>
  <h2>
    Summary
  </h2>
  <nav>
    <div>
      <InlineImage
        alt=""
        type={2}
      />
      <a
        href="#failed"
      >
        0
         failed checks 
      </a>
    </div>
    <div>
      <InlineImage
        alt=""
        type={3}
      />
      <a
        href="#passed"
      >
        0
         passed checks
      </a>
    </div>
    <div>
      <InlineImage
        alt=""
        type={4}
      />
      <a
        href="#notapplicable"
      >
        1
         not applicable checks
      </a>
    </div>
  </nav>
</div>
`;
